--- a/Day1/test.html
+++ b/Day1/test.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
+    <script> 
+        //add your javascript here 
         var text = "testing if this code runs";
         console.log(text)
 
